--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@ h3{
     font-weight: 500;
     text-transform: uppercase;
 }
+.navbar-brand img{
+    max-width: 120px;
+    max-height: 50px;
+    
+}
 .navbar-light .navbar-brand:focus,
 .navbar-light .navbar-brand:hover{
     color: #000;
@@ -77,7 +82,7 @@ h3{
 /* for animation effect */
 .about #popup, .service #popup,
 .team #popup, .contact #popup{
-    transition: 0.5s ease-in-out;
+    transition: 0.3s ease-in-out;
     opacity: 0;
     transform: scale(0);
 }
@@ -91,19 +96,22 @@ h3{
 
 .service #left, .team #left{
     position: relative;
-    left: -500px;
-    transition: 0.4s ease-in-out;
+    left: -700px;
+    display: none;
+    transition: 0.3s ease-in-out;
 }
 .service.show-animate #left, .team.show-animate #left{
-    position: relative;
+    display: inline;
     left: 0;
 }
 .service #right, .team #right{
     position: relative;
-    right: -500px;
-    transition: 0.4s ease-in-out;
+    right: -700px;
+    display: none;
+    transition: 0.3s ease-in-out;
 }
 .service.show-animate #right, .team.show-animate #right{
+    display: inline;
     right: 0;
 }
 
@@ -155,8 +163,10 @@ footer .navbar-nav .nav-item .nav-link{
     text-transform: capitalize;
     font-size: 1rem;
 }
-
-
+/* TERMS AND CONDITIOON */
+.second-list{
+    list-style-type: lower-alpha;
+}
 @media screen and (min-width: 768px) and (max-width:991px){
     .navbar-nav{
         text-align: center;
@@ -190,6 +200,9 @@ footer .navbar-nav .nav-item .nav-link{
     }
     .service .card-body{
         height: 45vh;
+    }
+    .service .lead{
+        font-size: 0.8rem;
     }
     footer ul li a{
         font-size: 0.2rem;
